--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
   background: white;
   border: lightgrey solid 2px;
   filter: saturate(0) opacity(0.7);
+  transition: all ease 1s;
+}
+
+.picture:hover {
+  filter: saturate(1) opacity(1);
+  transform: rotate(0deg);
 }
 
 .picture1 {
